# resident-advisor-events-scraper

./: .gitignore  README.md  event_fetcher.py  event_mapper.py  graphql_query_template.json  pyproject.toml
src/: bokeh_mapper.py  event_fetcher.py  event_mapper.py  folium_animated_bubble.py  folium_mapper.py  graphql_query_template.json  utils.py
