[tool.poetry]
name = "resident-advisor-events-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
idna = "3.4"
requests = "2.28.2"
urllib3 = "1.26.15"
bokeh = "^3.3.2"
geopy = "^2.4.1"
folium = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
